Remedy regex pattern warning in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Creature_2",
+  "name": "creature_2",
   "version": "1.0.0",
   "description": "By Daniel Kim",
   "main": "index.js",
