--- a/package.json
+++ b/package.json
@@ -4,15 +4,19 @@
   "description": "By Daniel Kim",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build-dev": "webpack -d --watch",
+    "build": "webpack -p",
+    "server-dev": "nodemon server/index.js",
+    "start": "node server/server.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/kimbyongjin/Creature_2.git"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Daniel Kim",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/kimbyongjin/Creature_2/issues"
   },
@@ -22,8 +26,18 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "path": "^0.12.7",
+    "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.6",
+    "nodemon": "^1.19.1",
+    "webpack": "^4.39.2",
+    "webpack-cli": "^3.3.7"
   }
 }
